--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^11.26.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
