--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.4",
     "@react-navigation/stack": "^7.0.5",
+    "@reduxjs/toolkit": "^2.4.0",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.2",
@@ -32,6 +33,7 @@
     "react-native-webview": "^11.26.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
