--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.0.4",
     "@react-navigation/stack": "^7.0.5",
     "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.2",
